Issue 4334: save doesn't work on network shares. The patch as supplied by Andrea (after merging).